Bumped Java, Gradle and Spring versions.