@@ -8,12 +8,16 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Slf4j
 public class Utils {
+
+    private Utils() {
+        throw new RuntimeException("Utility class");
+    }
 
     public static List<String> getFileContent(String filename){
         try {
@@ -27,9 +31,9 @@ public class Utils {
     }
 
     public static List<Integer> getFileContentAsIntegerList(String filename){
-        return Arrays.asList(Utils.getFileContentAsString(filename).split(",")).stream()
+        return Arrays.stream(Objects.requireNonNull(Utils.getFileContentAsString(filename)).split(","))
                 .map(Integer::parseInt)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static String getFileContentAsString(String filename){
@@ -37,7 +41,7 @@ public class Utils {
             Path path = Paths.get("src/main/resources/inputs/" + filename);
             return Files.readString(path);
         } catch (IOException e) {
-            log.error("Could not read file: {}", filename);
+            log.error("Could not read file: {}", filename, e);
             e.printStackTrace();
         }
         return null;
@@ -47,7 +51,7 @@ public class Utils {
         Pattern pattern = Pattern.compile("\\d+");
         Matcher matcher = pattern.matcher(input);
 
-        while(matcher.find()) {
+        if(matcher.find()) {
             return Integer.parseInt(matcher.group());
         }
 
